test_suite/tests/ui/fail/duplicated_attribute_arg/duplicated_option.rs
use clapi::macros::*;

#[command]
#[option(times)]
#[option(times, default=1)]
fn echo(times: i64){}

fn main(){}