test_suite/tests/ui/fail/duplicated_attribute_arg/duplicated_option.stderr
error: custom attribute panicked
 --> $DIR/duplicated_option.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: function argument `times` is already used in `#[option(times)]`
